<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsageOfIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity">这里是主Activity~</string>
	<string name="main_button" >Button</string>
	<string name="confirm_button">Confirm</string>
	<string name="activity1">这里是Activity1</string>
	<string name="name">Name</string>
	<string name="sex">Sex </string>
	<string name="age">Age</string>
	<string name="name_hint">Please input your name</string>
	<string name="sex_hint">Please input your sex</string>
	<string name="age_hint">Please input your age</string>
</resources>
