<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity1" 
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    
    <TextView 
        android:id="@+id/name"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
       	
        />
    <EditText 
        android:id="@+id/name_input"
        android:hint="@string/name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    
    <TextView 
        android:id="@+id/sex"
        android:text="@string/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
       	
        />
    <EditText 
        android:id="@+id/sex_input"
        android:hint="@string/sex_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    
    <TextView 
        android:id="@+id/age"
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
       	
        />
    <EditText 
        android:id="@+id/age_input"
        android:hint="@string/age_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    </LinearLayout>
    <Button 
        android:id="@+id/Button_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm_button"
        android:textSize="15sp"       
        />
    
    

</TableLayout>
